Second_Step/data/46/178/execution.txt

Comment :=>>-The compilation or preparation of execution has failed
<|--
Tools.java:26: error: class, interface, or enum expected
    public static int fastNumberOfCancellations(int[] tab) {
                  ^
Tools.java:28: error: class, interface, or enum expected
        int i=0;
        ^
Tools.java:29: error: class, interface, or enum expected
        int j=0;
        ^
Tools.java:30: error: class, interface, or enum expected
        while(i<j){
        ^
Tools.java:33: error: class, interface, or enum expected
                i++;
                ^
Tools.java:34: error: class, interface, or enum expected
                j--;
                ^
Tools.java:35: error: class, interface, or enum expected
            }
            ^
Tools.java:38: error: class, interface, or enum expected
            }else{i++;
            ^
Tools.java:39: error: class, interface, or enum expected
            }
            ^
9 errors
Not compiled
--|>
Grade :=>>0.00000
